--- a/src/01-cart/styles/RecMerch.scss
+++ b/src/01-cart/styles/RecMerch.scss
@@ -33,6 +33,7 @@ $border-radius-button: 8px;
 .y-rec-merch-border {
     border: $border-lg;
     max-width: 295px;
+    margin: 0 auto;
 
     .y-rec-merch-pic { 
         border-bottom:  $border-lg;
