--- a/src/00-homepage/styles/YellowWaveReverse.scss
+++ b/src/00-homepage/styles/YellowWaveReverse.scss
@@ -9,22 +9,23 @@ $wave-height: 40px;
     // position: relative;
     width: 100%;
     height: 60px;
-    // background-color: transparent; 
     overflow: hidden;
+    background-color: $main-yellow;
+
     .y-wave-reverse-base {
-        width: 100%;
-        height: $wave-height;
-        background-color: $main-yellow;
+        // width: 100%;
+        // height: $wave-height;
+        // background-color: $main-yellow;
     }
     .y-wave-reverse-wrap {
         // position: absolute;
         // top: $wave-height;
         width: 100%;
-        height: 60px;
+        height: 100%;
         background: {
             image: url(./../images/wave-1920px-reverse.png);
-            // repeat: no-repeat;
-            position: 50% 0;
+            repeat: no-repeat;
+            position: 0 0;
             size: 1920px 60px;
         }
         animation: animate 3.5s linear infinite;
