--- a/src/05-member/style/UserSign.scss
+++ b/src/05-member/style/UserSign.scss
@@ -116,11 +116,11 @@ $s-main-b: #113f75;
             /* padding: 10px; */
           }
 
-          .s-login-h3 {
+          .s-login-main-h3 {
             font-size: 16px;
             color: $s-font;
             margin-bottom: 20px;
-            font-weight: 500;
+            font-weight: 600;
             /* padding: 10px; */
           }
 
@@ -136,7 +136,7 @@ $s-main-b: #113f75;
           .s-login-submit {
             /* border: none; */
             /* color: #fff; */
-            font-weight: 600p;
+            font-weight: 700;
             width: 100%;
             cursor: pointer;
             border-radius: 8px;
