--- a/src/styles/Menu.scss
+++ b/src/styles/Menu.scss
@@ -249,11 +249,14 @@ li {
                 border-bottom: 2px dashed $main-blue;
                 display: flex;
                 justify-content: space-between;
-                .y-social-media-wrap{
-                    width: 28px;
+                
+                li {
+                    width: 32px;
                     aspect-ratio: 1/1;
-                    img {
-                        width: 100%;
+                    a {
+                        img {
+                            width: 100%;
+                        }
                     }
                 }
 
@@ -270,8 +273,9 @@ li {
         right: 43px;
         .y-menu-border {
             // width: calc(100% - 43px);
-            min-height: 400px;
-            max-height: 800px;
+            height: calc(100vh - 60px);
+            min-height: 800px;
+            // max-height: 1800px;
             align-items:flex-start;
             
             .y-menu-top {
@@ -296,12 +300,17 @@ li {
 
             .y-menu-bottom {
                 padding: 0 200px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                
                 // min-width: 500px;
-                max-width: 1350px;
+                max-width: 1320px;
                 .y-menu-search {
                     height: 55px;
                     min-width: 300px;
-                    max-width: 520px;
+                    max-width: 600px;
                     margin-bottom: 60px;
     
                     .y-search-border {
@@ -346,11 +355,13 @@ li {
                     display: flex;
                     justify-content: space-between;
 
-                    .y-social-media-wrap{
-                        width: 28px;
+                    li {
+                        width: 48px;
                         aspect-ratio: 1/1;
-                        img {
-                            width: 100%;
+                        a {
+                            img {
+                                width: 100%;
+                            }
                         }
                     }
     
