--- a/src/01-cart/styles/CartItemsList.scss
+++ b/src/01-cart/styles/CartItemsList.scss
@@ -35,15 +35,17 @@ $border-radius-button: 8px;
     .y-Cart-items-top {
         width: 100%;
         display: flex;
+        justify-content: space-between;
         align-items: center;
+        flex-wrap: wrap;
         margin-bottom: 15px;
 
         .y-Cart-items-info {
-            width: 40%;
+            width: 54%;
             display: flex;
-            justify-content:space-between;
-            align-items: center;
-            padding: 20px 40px;
+            justify-content: space-between;
+            align-items: flex-end;
+            padding: 15px 10px;
 
             .y-Cart-items-info-left {
                 position: relative;
@@ -52,15 +54,20 @@ $border-radius-button: 8px;
                     background-color: $btn-red;
                     color: #fff;
                     position: absolute;
-                    padding: 8px 12px;
+                    width: 52px;
+                    padding: 4px 0;
                     letter-spacing: 2px;
+                    top: 8px;
+                    left: 48px;
+                    font-size: 12px;
+                    text-align: center;
 
                 
                 }
     
                 .y-Cart-items-info-pic {
-                    width: 180px;
-                    height: 180px;
+                    width: 80px;
+                    height: 80px;
                     overflow: hidden;
                     background-color: #ddd;
 
@@ -73,22 +80,28 @@ $border-radius-button: 8px;
             }
     
             .y-Cart-items-info-name {
+                width: 50%;
                 font-weight: bold;
-                font-size: 24px;
+                font-size: 14px;
+                text-align: center;
+                letter-spacing: 1px;
+                margin-left: 5px;
             }
         }
     
         .y-Cart-items-price {
-            width: 13%;
+            width: 10%;
 
             p {
                 text-align: center;
+                font-size: 14px;
                 font-weight: bold;
+                color: $main-blue;
             }
         }
     
         .y-Cart-items-quantity {
-            width: 13%;
+            width: 12%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -96,11 +109,11 @@ $border-radius-button: 8px;
             select {
                 background-color: $main-yellow;
                 color: $main-blue;
-                width: 100px;
-                padding: 8px 16px;
-                padding-right: 36px;
+                width: 60px;
+                padding: 6px 8px;
+                padding-right: 30px;
                 position: relative;
-                border: $border-white-lg;
+                border: $border-sm;
                 // box-shadow: $btn-shadow-lg;
                 border-radius: $border-radius-button;
                 appearance:none;
@@ -110,7 +123,7 @@ $border-radius-button: 8px;
                     image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient($main-yellow, $main-yellow);
                     image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), -webkit-linear-gradient($main-yellow, $main-yellow);
                     image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), -moz-linear-gradient($main-yellow, $main-yellow);
-                    position: right 12px top 50%, 0 0;
+                    position: right 4px top 50%, 0 0;
                     size: contain, cover;
                     repeat: no-repeat, repeat;
 
@@ -127,6 +140,7 @@ $border-radius-button: 8px;
                 width: 13%;
 
             p {
+                font-size: 14px;
                 text-align: center;
                 font-weight: bold;
             }
@@ -152,73 +166,116 @@ $border-radius-button: 8px;
     }
     
     .y-Cart-YellowLineWave-wrap {
-        margin-top: 15px;
+        margin-top: 10px;
         overflow: hidden;
-    
+
         img {
-    
+            width: 100%;
+            // object-fit: cover;
         }
     }
 }
 
 @media (min-width: 391px) {
     .y-Cart-items {
-
+    
         .y-Cart-items-top {
-            
+            width: 100%;
+            margin-bottom: 15px;
+    
             .y-Cart-items-info {
                 width: 40%;
-        
+                align-items: center;
+                padding: 20px 40px;
+    
                 .y-Cart-items-info-left {
     
                     .y-Cart-items-sale {
-        
+                        padding: 8px 12px;
+                        letter-spacing: 2px;
+    
                     
                     }
         
                     .y-Cart-items-info-pic {
+                        width: 180px;
+                        height: 180px;
     
                         img {
-        
+                        
                         }
                     }
                     
                 }
         
                 .y-Cart-items-info-name {
-        
+                    width: 100%;
+                    font-size: 24px;
+                    letter-spacing: 3px;
+                    margin-left: 0;
+
                 }
             }
         
             .y-Cart-items-price {
-        
+                width: 13%;
+    
                 p {
-        
+                    font-size: 16px;
                 }
             }
         
             .y-Cart-items-quantity {
-                
+                width: 13%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+    
                 select {
-                    
+                    width: 100px;
+                    padding: 8px 16px;
+                    padding-right: 36px;
+                    position: relative;
+                    border: $border-white-lg;
+                    // box-shadow: $btn-shadow-lg;
+                    border-radius: $border-radius-button;
+                    appearance:none;
+                    -moz-appearance:none;
+                    -webkit-appearance:none;
                     background: {
-                        
+                        image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient($main-yellow, $main-yellow);
+                        image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), -webkit-linear-gradient($main-yellow, $main-yellow);
+                        image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%3Cpath%20fill%3D%22%23ffffff%22%20d%3D%22M7%2010l5%205%205-5z%22%2F%3E%3C%2Fsvg%3E"), -moz-linear-gradient($main-yellow, $main-yellow);
+                        position: right 12px top 50%, 0 0;
+                        size: contain, cover;
+                        repeat: no-repeat, repeat;
+    
                     }
+                    
                     option {
-        
+                        appearance: none;
+                        // font-weight: bold;
                     }
                 }
             }
         
             .y-Cart-items-unit {
-        
+                    width: 13%;
+    
                 p {
-        
+                    text-align: center;
+                    font-weight: bold;
                 }
             }
         
             .y-Cart-items-actions {
-        
+                width: 21%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                // justify-content: space-between;
+                align-items: center;
+                
                 .y-Cart-WishListBtn-wrap {
         
                 }
@@ -231,6 +288,7 @@ $border-radius-button: 8px;
         }
         
         .y-Cart-YellowLineWave-wrap {
+            margin-top: 15px;
             overflow: hidden;
         
             img {
