--- a/src/05-member/style/UserSign.scss
+++ b/src/05-member/style/UserSign.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 $s-bgcYellow: url(../../../public/05-member/bgc_yellow.jpg);
 $s-bgcBlue: url(../../../public/05-member/bgc_blue.jpg);
 $s-bgc: #fff;
@@ -8,10 +7,7 @@ $s-main-y: #fad249;
 $s-main-b: #113f75;
 
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
 }
 
 .s-body-signup {
@@ -113,6 +109,7 @@ $s-main-b: #113f75;
             font-size: 30px;
             color: $s-font-main;
             margin-bottom: 10px;
+            font-weight: 600;
             /* padding: 10px; */
           }
 
@@ -126,7 +123,7 @@ $s-main-b: #113f75;
 
           .s-login-input {
             width: 100%;
-            // margin-bottom: 20px;
+            margin-bottom: 5px;
             padding: 10px;
             outline: none;
             font-size: 16px;
