--- a/src/05-member/style/UserProfileTmp.scss
+++ b/src/05-member/style/UserProfileTmp.scss
@@ -4,7 +4,7 @@ $s-padding-top: 100px;
 .s-body-profile {
   display: flex;
   flex-direction: column;
-  max-height: 100vh;
+  min-height: 100vh;
   overflow-x: hidden;
   // background-color: red;
 
