--- a/src/05-member/style/YellowWave.scss
+++ b/src/05-member/style/YellowWave.scss
@@ -16,7 +16,7 @@ $wave-height: 40px;
     // position: absolute;
     // top: $wave-height;
     width: 20%;
-    height: 100vh;
+    min-height: 100vh;
     background: {
       image: url(../../../public/05-member/wave-1920px.png);
       // repeat: no-repeat;
