--- a/src/05-member/style/profile-pages/UpdateInfo.scss
+++ b/src/05-member/style/profile-pages/UpdateInfo.scss
@@ -81,20 +81,26 @@
 
         .s-ui-block2 {
           display: flex;
-          margin-right: 15%;
+          margin-right: 10%;
 
           .s-ui-question {
-            font-size: 20px;
+            font-size: 18px;
             color: #555;
             line-height: 1.2em;
             font-weight: 600;
+
+            // border: 1px solid red;
           }
 
           .s-ui-answer {
             margin-left: 10px;
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 400;
             opacity: 0.7;
+            text-align: center;
+            line-height: 1.2em;
+
+            // border: 1px solid red;
           }
         }
       }
@@ -108,14 +114,21 @@
           display: flex;
           flex-direction: column;
 
+          // border: 1px solid red;
+
           .s-ui-block2 {
             display: flex;
             flex-direction: column;
             margin-bottom: 20px;
 
+            // border: 1px solid blue;
+
             .s-ui-answer {
               margin-left: 0;
-
+              margin-top: 7px;
+              text-align: left;
+              
+              // border: 1px solid yellow;
             }
           }
         }
@@ -123,7 +136,7 @@
     }
 
     .s-ui-label {
-      font-size: 20px;
+      font-size: 18px;
       color: #555;
       line-height: 1.2em;
       font-weight: 600;
