--- a/src/03-shop/styles/03-shop-list.scss
+++ b/src/03-shop/styles/03-shop-list.scss
@@ -364,7 +364,7 @@ $card-btn: #80b938;
             background-color: #fff;
             border-radius: 8px 0 0 0;
             padding: 10px 10px 0 10px;
-            .r-btn-list-map {
+            .r-btn-list {
               display: flex;
               flex-direction: column;
               justify-content: center;
@@ -374,11 +374,42 @@ $card-btn: #80b938;
               background-color: #fff;
               border: 3px solid #333;
               border-radius: 15px;
-              padding-right: 5px;
-              margin-left: 10px;
-              a {
-                text-decoration: none;
+
+              button {
+                border: none;
                 color: $main-Blue;
+                border-radius: 8px;
+                background: #fff;
+                padding: 10px;
+                span {
+                  letter-spacing: 0.2rem;
+                  font-size: 18px;
+                  font-weight: 700;
+                  padding-left: 8px;
+                }
+                i {
+                  font-size: 20px;
+                }
+              }
+            }
+            .r-btn-map {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              width: 150px;
+              height: 50px;
+              text-align: right;
+              background-color: #fff;
+              border: 3px solid #333;
+              border-radius: 15px;
+              // padding-right: 5px;
+              margin-left: 10px;
+              button {
+                border: none;
+                color: $main-Blue;
+                border-radius: 8px;
+                background: #fff;
+                padding: 10px;
                 span {
                   letter-spacing: 0.2rem;
                   font-size: 18px;
@@ -423,6 +454,8 @@ $card-btn: #80b938;
             .r-m-card-img {
               padding: 10px;
               text-align: center;
+              display: flex;
+              flex-direction: column;
               .r-m-card-img-wrap {
                 width: 100px;
                 height: 100px;
@@ -433,21 +466,19 @@ $card-btn: #80b938;
                   object-fit: cover;
                 }
               }
-
-              p {
-                font-size: 16px;
-                letter-spacing: 0.2rem;
-                color: #fff;
-                background-color: #000;
-                line-height: 20px;
-                margin-bottom: 5px;
-              }
               span {
                 font-size: 16px;
                 letter-spacing: 0.2rem;
-                color: $main-text;
+                color: #fff;
                 line-height: 20px;
+                background: #f00;
               }
+              .r-m-card-body-cates{
+                p{
+                  padding-top: 8px;
+                }
+              }
+
             }
 
             .r-m-card-body {
@@ -466,9 +497,6 @@ $card-btn: #80b938;
                 padding-bottom: 5px;
                 color: $main-text;
                 letter-spacing: 0.2rem;
-              }
-              .r-card-body-cates {
-                display: flex;
               }
               .r-m-card-week-btn {
                 padding-bottom: 10px;
