--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -41,28 +41,85 @@ $border-radius-button: 8px;
 }
 
 .y-section-news {
-    overflow: hidden;
-    height: 20px;
-    margin-top: 50px;
+    // overflow: hidden;
+    height: 30px;
+    // margin-top: 50px;
     background-color: #FBFBF2;
-    border-top: 1px solid $main-text;
-    border-bottom: 1px solid $main-text;
 
-    p {
-        text-decoration: none;
-        font-size: 14px;
+    .y-news-list-wrap {
+        height: 100%;
+        display: flex;
+        border-top: $border-sm;
+        border-bottom: $border-sm;
+
+        .y-new-icon-wrap {
+            height: 100%;
+            aspect-ratio: 1/1;
+
+            img {
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+
+        .y-news-category {
+            p {
+                
+            }
+        }
+
+        .y-news-content {
+            a {
+                // text-decoration: none;
+                font-size: 14px;
+                color: $main-text;
+            }
+
+        }
     }
     
 }
 
 @media (min-width: 391px) {
     .y-section-news {
-        height: 18px;
+        height: 45px;
         margin-top: 90px;
     
-        p {
-            font-size: 16px;
-            vertical-align: middle;
+        .y-news-list-wrap {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            border-top: $border-sm;
+            border-bottom: $border-sm;
+    
+            .y-new-icon-wrap {
+                width: 32px;
+                height: 32px;
+                border: $border-sm;
+                border-radius: 50%;
+                padding: 2px;
+
+                img {
+                    width: 100%;
+                    object-fit: cover;
+                    object-position: 50% 50%;
+                }
+            }
+            .y-news-category {
+                p {
+                    font-size: 20px;
+                    letter-spacing: 2px;
+                    font-weight: bold;
+                }
+            }
+            .y-news-content {
+                a {
+                    font-size: 20px;
+                    letter-spacing: 2px;
+                    font-weight: bold;
+                }
+    
+            }
         }
     }
 }
