--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,57 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -306,98 +252,4 @@ input {
   .y-btn-wrap-opened .y-menu-border .y-menu-bottom .y-social-media .y-social-media-wrap img {
     width: 100%;
   }
-}
-* {
-  box-sizing: border-box;
-}
-
-.y-index-container {
-  min-width: 390px;
-  background-color: #fff;
-}
-
-.y-index-top {
-  width: 100%;
-  background-color: #FAD249;
-}
-
-.y-section {
-  width: 100%;
-}
-
-.y-section-nav {
-  position: fixed;
-  z-index: 999;
-  top: 0;
-  height: 50px;
-  padding: 0 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.y-section-nav .y-logo-wrap {
-  width: 110px;
-}
-.y-section-nav .y-nav-right {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-.y-section-nav .y-nav-right .y-icon-round {
-  width: 30px;
-  aspect-ratio: 1/1;
-  border-radius: 50%;
-  overflow: hidden;
-  border: #2B325C 2px solid;
-  margin-right: 6px;
-  background-color: white;
-}
-.y-section-nav .y-nav-right .y-icon-round .y-cart-icon {
-  margin-right: 20px;
-}
-.y-section-nav .y-nav-right .y-icon-round .y-cart-icon img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-@media (min-width: 391px) {
-  .y-section-nav {
-    height: 90px;
-    padding: 0 40px;
-  }
-  .y-section-nav .y-logo-wrap {
-    width: 250px;
-    height: 60px;
-  }
-  .y-section-nav .y-nav-right {
-    width: 300px;
-  }
-  .y-section-nav .y-nav-right .y-icon-round {
-    width: 55px;
-    border: #2B325C 3px solid;
-    margin-right: 12px;
-  }
-  .y-section-nav .y-nav-right .y-icon-round .y-cart-icon {
-    margin-right: 20px;
-  }
-}
-.y-section-news {
-  overflow: hidden;
-  height: 20px;
-  margin-top: 120px;
-  background-color: #FBFBF2;
-}
-.y-section-news p {
-  text-decoration: none;
-}
-
-.y-section-carousel {
-  height: 300px;
-  background-color: #FAD249;
-}
-
-.y-section-merch {
-  height: 500px;
-  background-color: #FAD249;
-}/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=Menu.css.map */
