--- a/src/06-event/styles/06-event-02-events.scss
+++ b/src/06-event/styles/06-event-02-events.scss
@@ -92,7 +92,7 @@ body {
     }
   }
   .j-cate-group {
-    margin-top: 30px;
+    margin-top: 5%;
     display: flex;
     justify-content: space-evenly;
     @media (max-width: 390px) {
@@ -122,7 +122,7 @@ body {
           height: 50px;
           border-bottom: 3px solid $colorLightGrey;
           transform: scale(0.5);
-          transform: translateY(100%);
+          transform: translateY(50%);
           transition: 0.5s;
           opacity: 0;
           @media (max-width: 390px) {
@@ -130,14 +130,14 @@ body {
             height: 30px;
           }
         }
-        &:hover::after {
-          border-bottom: 3px solid $colorMiddleGrey;
-          transform: scale(1);
-          transform: translateY(0%);
-          opacity: 1;
-          @media (max-width: 390px) {
-            border-bottom: 1px solid $colorMiddleGrey;
-          }
+      }
+      div.cactive::after {
+        border-bottom: 3px solid $colorMiddleGrey;
+        transform: scale(1);
+        transform: translateY(-10%);
+        opacity: 1;
+        @media (max-width: 390px) {
+          border-bottom: 1px solid $colorMiddleGrey;
         }
       }
     }
@@ -146,7 +146,7 @@ body {
     width: 100%;
     height: 100px;
     // outline: 2px black solid;
-    margin-top: 25px;
+    margin-top: 4%;
     margin-bottom: -5px;
     position: relative;
     z-index: -1;
@@ -157,59 +157,29 @@ body {
     .j-blue-mountain {
       transition: 0.5s;
       transform: scale(0.8);
-      @include position(16%, -2%);
+      @include position(16%, -6%);
       @media (max-width: 390px) {
         transform: scale(0.4);
         @include position(30%, -40%);
-        // &:hover {
-        //   transform: scale(0.4);
-        //   @include position(24%, -40%);
-        //   transform: translateY(-20px);
-        // }
-      }
-      &:hover {
-        transform: scale(1);
-        transform: translateY(-16%);
-        @media (max-width: 390px) {
-          transform: scale(0.4);
-          @include position(30%, -40%);
-          transform: translateY(-10px);
-        }
       }
     }
     .j-rice-mountain {
       transition: 0.5s;
       transform: scale(0.8);
-      @include position(16%, 20%);
+      @include position(16%, 18%);
       @media (max-width: 390px) {
         transform: scale(0.4);
         @include position(30%, -19%);
-      }
-      &:hover {
-        transform: scale(1);
-        transform: translateY(-16%);
-        @media (max-width: 390px) {
-          transform: scale(0.4);
-          @include position(30%, -19%);
-        }
       }
     }
     .j-green-mountain {
       z-index: 2;
       transition: 0.5s;
       transform: scale(0.8);
-      @include position(16%, 43%);
+      @include position(16%, 41%);
       @media (max-width: 390px) {
         transform: scale(0.4);
         @include position(30%, 4%);
-      }
-      &:hover {
-        transform: scale(1);
-        transform: translateY(-16%);
-        @media (max-width: 390px) {
-          transform: scale(0.4);
-          @include position(30%, 4%);
-        }
       }
     }
     .j-orange-mountain {
@@ -220,9 +190,19 @@ body {
         transform: scale(0.4);
         @include position(30%, 27%);
       }
-      &:hover {
-        transform: scale(1);
-        transform: translateY(-16%);
+      // &:hover {
+      //   transform: scale(1);
+      //   transform: translateY(-16%);
+      // }
+    }
+    div.mactive {
+      z-index: 199;
+      transform: scale(1);
+      transform: translateY(-16%);
+      @media (max-width: 390px) {
+        transform: scale(0.4);
+        @include position(30%, -40%);
+        transform: translateY(-10px);
       }
     }
     .img {
@@ -241,7 +221,7 @@ body {
     .j-lego {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 95px 1fr 80px;
+      grid-template-rows: 95px 260px 80px;
       gap: 30px;
       border-radius: 15px;
       grid-template-areas:
@@ -285,7 +265,7 @@ body {
         border-radius: 15px;
         width: 100%;
         overflow: hidden;
-        object-fit: cover;
+        object-fit: fit;
         @media (max-width: 390px) {
           border-radius: 5px;
         }
@@ -296,14 +276,13 @@ body {
       .j-card-text {
         grid-area: text;
         border-radius: 15px;
-        padding: 10px 25px;
-        font-size: 1.8rem;
-        overflow: hidden;
+        padding: 20px 25px 20px 28px;
+        font-size: 2rem;
+        overflow: scroll;
         text-overflow: ellipsis;
         line-height: 3rem;
         background-color: $colorMiddleGrey;
         color: $colorWhite;
-        text-align: center;
         @media (max-width: 390px) {
           border-radius: 5px;
           padding: 15px 15px;
