--- a/src/00-homepage/styles/Homepage.scss
+++ b/src/00-homepage/styles/Homepage.scss
@@ -66,7 +66,10 @@ $border-radius-button: 8px;
 
         .y-section-carousel {
             background-color: $main-yellow;
-            // offset-position: 30px 0;
+
+            .y-carousel-wrap {
+
+            }
         }
 
         .y-wave-wrap {
@@ -104,6 +107,7 @@ $border-radius-button: 8px;
         .y-section-news {
             padding-top: 90px;
             display: flex;
+            margin-bottom: 20px;
         
             .y-section-news-first {
                 position: relative;
@@ -123,6 +127,11 @@ $border-radius-button: 8px;
 
         .y-section-carousel {
             
+            .y-carousel-wrap {
+                margin: 0 auto;
+                max-width: 1040px;
+                border: $border-lg;
+            }
         }
 
         .y-wave-wrap {
